Fix design issues

--- a/pages/project_overview.html
+++ b/pages/project_overview.html
@@ -52,6 +52,6 @@
 
   <!-- Visual Content -->
   <div class="card">
-    <img class="image-large" src="assets/images/project_overview.png" alt="Projektübersicht">
+    <img class="image-placeholder" src="assets/images/project_overview.png" alt="Projektübersicht">
   </div>
 </section>
