--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -39,7 +39,7 @@
   
     <!-- Visual Placeholder -->
     <div class="card">
-      <img class="image-large" src="assets/images/reflection_chart.png" alt="Reflexion und Learnings Diagramm">
+      <img class="image-placeholder" src="assets/images/reflection_chart.png" alt="Reflexion und Learnings Diagramm">
     </div>
   </section>
   
