--- a/pages/research.html
+++ b/pages/research.html
@@ -32,7 +32,7 @@
       <li>💻 <strong>Plattformnutzung:</strong> 27 Personen bevorzugten digitale Netzwerke für berufliche und persönliche Zwecke.</li>
       <li>🎯 <strong>Aktivitätserwartungen:</strong> „Gemeinsame spielerische Elemente wie Challenges, Quizze oder Icebreaker“ wurden von 10 Teilnehmern als wünschenswert bewertet.</li>
     </ul>
-    <img class="image-large" src="assets/images/user_research_insights.png" alt="Diagramme aus dem User Research">
+    <img class="image-placeholder" src="assets/images/user_research_insights.png" alt="Diagramme aus dem User Research">
   </div>
 
   <!-- Key Insights -->
