Fix mobile header and add carousel

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="logo">
           <a href="#"><h1>KIM</h1></a>
         </div>
+        <div class="burger-menu">✨</div>
         <div class="navigation">
           <ul>
             <li><a href="#" data-page="introduction">Einführung</a></li>
@@ -40,6 +41,7 @@
       </nav>
     </div>
   </header>
+  
 
   <!-- Main Content -->
   <main id="content" class="container">
