--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <nav class="grid grid-3">
+      <nav>
         <div class="logo">
+          <div class="burger-menu">✨</div>
           <a href="#"><h1>KIM</h1></a>
         </div>
-        <div class="burger-menu">✨</div>
         <div class="navigation">
           <ul>
             <li><a href="#" data-page="introduction">Einführung</a></li>
