--- a/pages/research.html
+++ b/pages/research.html
@@ -69,7 +69,7 @@
   </div>
 
   <!-- Persona-Entwicklung -->
-  <div class="card grid grid-2">
+  <div class="card grid">
     <div>
       <h2>Persona-Entwicklung</h2>
       <p>
@@ -78,6 +78,6 @@
         zum zentralen Punkt, um die Designentscheidungen bei KIM nutzerzentriert auszurichten.
       </p>
     </div>
-    <img class="image-medium" src="assets/images/persona_tom.png" alt="Persona-Karte von Tom">
+    <img class="image-large" src="assets/images/persona_tom.png" alt="Persona-Karte von Tom">
   </div>
 </section>
