Add images and fix minimal issues- carousel not working

--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -1,5 +1,4 @@
-<section>
-    <!-- Herausforderungen -->
+<section class="main-section">
     <div class="card">
       <h1>Reflexion und Learnings</h1>
       <h2>Herausforderungen</h2>
@@ -7,39 +6,21 @@
         Die zentrale Herausforderung war, KIM mit einer „Seele“ zu versehen, um Nutzern ein Gefühl der echten Verbindung zu geben.
         Der iterative Prozess und das psychologische Storytelling halfen dabei, KIM zu etwas zu machen, das Vertrauen und Tiefe vermittelt.
       </p>
-    </div>
-  
-    <!-- Learnings -->
-    <div class="card">
       <h2>Learnings</h2>
       <p>
         Die Balance zwischen Funktionalität und Emotionalität zu finden, war das größte Learning. Der Wechsel auf mid-fidelity
         und die Entscheidung, KIM durch psychologisch fundierte Fragen und Emotionen zu formen, zeigte uns, wie wichtig es ist,
         Flexibilität in den Designprozess einzubringen.
       </p>
-    </div>
-  
-    <!-- Was wir anders machen würden -->
-    <div class="card">
       <h2>Was wir anders machen würden</h2>
       <p>
         Mit mehr Zeit hätten wir die Usability-Tests früher integriert und KIM’s KI-Funktionen tiefergehend validiert, um die User Experience
         noch präziser zu gestalten.
       </p>
-    </div>
-  
-    <!-- Zukunftsaussichten -->
-    <div class="card">
       <h2>Zukunftsaussichten</h2>
       <p>
         Langfristig könnte KIM eine innovative Plattform für nachhaltige und tiefe soziale Verbindungen werden – nicht nur digital,
         sondern auch durch reale Treffen und Erlebnisse.
       </p>
-    </div>
-  
-    <!-- Visual Placeholder -->
-    <div class="card">
-      <img class="image-placeholder" src="assets/images/reflection_chart.png" alt="Reflexion und Learnings Diagramm">
-    </div>
   </section>
   
