--- a/pages/final_design.html
+++ b/pages/final_design.html
@@ -28,13 +28,7 @@
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-slide">
-          <div class="appscreen-placeholder">App Screen 1</div>
-        </div>
-        <div class="carousel-slide">
-          <div class="appscreen-placeholder">App Screen 2</div>
-        </div>
-        <div class="carousel-slide">
-          <div class="appscreen-placeholder">App Screen 3</div>
+          <div class="appscreen"></div>
         </div>
       </div>    
       <button class="carousel-button prev">◀</button>
