--- a/pages/project_overview.html
+++ b/pages/project_overview.html
@@ -48,10 +48,7 @@
     <blockquote>
       <strong>„Verbindungen, die auf Verständnis basieren, statt nur auf Netzwerken.“</strong>
     </blockquote>
+    <img class="image-large" src="assets/images/project_overview.png" alt="Projektübersicht">
   </div>
 
-  <!-- Visual Content -->
-  <div class="card">
-    <img class="image-placeholder" src="assets/images/project_overview.png" alt="Projektübersicht">
-  </div>
 </section>
