Fix pages but Layout still not good- next step carousel

--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
             <li><a href="#" data-page="architecture">Architektur</a></li>
             <li><a href="#" data-page="ux_process">UX-Prozess</a></li>
             <li><a href="#" data-page="final_design">Design</a></li>
-            <li><a href="#" data-page="results">Ergebnisse</a></li>
             <li><a href="#" data-page="reflection">Reflexion</a></li>
           </ul>
         </div>
       </nav>
     </div>
-  </header>
+  </header>ai
   
 
   <!-- Main Content -->
