--- a/pages/project_overview.html
+++ b/pages/project_overview.html
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Team & Rollen -->
-  <div class="card grid grid-2">
+  <div class="card">
     <div>
       <h2>Team & Rollen</h2>
       <p>
