Fix Carousel but still layout and design missing

--- a/pages/final_design.html
+++ b/pages/final_design.html
@@ -28,12 +28,63 @@
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-slide">
-          <div class="appscreen"></div>
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_1.png" alt="App Screen 1">
+          </div>
         </div>
-      </div>    
-      <button class="carousel-button prev">◀</button>
-      <button class="carousel-button next">▶</button>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_2.png" alt="App Screen 2">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_3.png" alt="App Screen 3">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_4.png" alt="App Screen 4">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_5.png" alt="App Screen 5">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_6.png" alt="App Screen 6">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_7.png" alt="App Screen 7">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_8.png" alt="App Screen 8">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_9.png" alt="App Screen 9">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_10.png" alt="App Screen 10">
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="appscreen">
+            <img src="assets/images/appscreens/final_app_screens_11.png" alt="App Screen 11">
+          </div>
+        </div>
+      </div>
+      <button class="carousel-button prev" aria-label="Previous Slide">◀</button>
+      <button class="carousel-button next" aria-label="Next Slide">▶</button>
     </div>
   </div>
-  
 </section>
