Add minor Changes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="container">
       <nav>
         <div class="logo">
-          <div class="burger-menu">✨</div>
-          <a href="#"><h1>KIM</h1></a>
+          <img src="assets/images/KIM_logo_large.png" alt="KIM Logo" class="logo-large">
+          <img src="assets/images/KIM_logo_small.png" alt="KIM Logo" class="logo-small">
         </div>
         <div class="navigation">
           <ul>
@@ -36,13 +36,13 @@
             <li><a href="#" data-page="final_design">Design</a></li>
             <li><a href="#" data-page="reflection">Reflexion</a></li>
           </ul>
+          <button class="burger-menu" aria-label="Navigation öffnen">&#9776;</button>
         </div>
       </nav>
     </div>
-  </header>ai
-  
+  </header>
 
-  <!-- Main Content -->
+    <!-- Main Content -->
   <main id="content" class="container">
     <!-- Dynamisch geladene Inhalte -->
   </main>
